[#20208] platform fix